--- a/homePage.html
+++ b/homePage.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="/style/homePageStyle.css" />
   </head>
   <body>
+
+ 
+  <script src="script.js"></script>
+
+    <div id="displayCarts"></div>
+    <!-- <div>
+     
+      <input type="text" id="searchInput" >
+      <button id="searchButton">Szukaj</button>
+    </div> -->
     
     <script src="/script/homePageScript.js"></script>
   </body>
