Dodanie ostatecznej wersji

--- a/formPage.html
+++ b/formPage.html
@@ -12,12 +12,12 @@
       <h1>Formularz zakupowy:</h1>
 
       <div class="radioSection">
-      <label for="cash">Gotówka</label>
-      <input type="radio" id="cash" name="payment" value="Gotówka" />
-      <br />
-      <label for="leasing">Leasing</label>
-      <input type="radio" id="leasing" name="payment" value="Leasing" />
-    </div>
+        <label for="cash">Gotówka</label>
+        <input type="radio" id="cash" name="payment" value="Gotówka" />
+        <br />
+        <label for="leasing">Leasing</label>
+        <input type="radio" id="leasing" name="payment" value="Leasing" />
+      </div>
       <br />
       <label for="nameImput">Imię Nazwisko:</label>
       <input type="text" id="nameImput" />
@@ -29,7 +29,7 @@
       <select name="" id="date"></select>
       <br />
       <h2>Aksesoria do samochodu:</h2>
-      <ul id="ol"></ul>
+      <ul id="ulListAccessory"></ul>
       <h3>Aksesoria dodane do zamówienia:</h3>
 
       <ul id="listAdd"></ul>
@@ -38,7 +38,6 @@
       <div class="buyBtn">
         <button id="buyBtn">Zakup</button>
       </div>
-      
 
       <div id="errorDate"></div>
     </div>
