--- a/formPage.html
+++ b/formPage.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="containerForm">
-      <button id="buyBeturn">Powrót</button>
+      <button id="buyReturn">Powrót</button>
       <h1>Formularz zakupowy:</h1>
 
       <div class="radioSection">
