--- a/index.html
+++ b/index.html
@@ -5,13 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
     <link rel="stylesheet" href="/style/homePageStyle.css" />
+    <script src="https://kit.fontawesome.com/e5bba1b8a3.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <div class="welcomeSection">
-      <h1 class="welcome">Witamy w sklepie samochodów uzywanych JSautko</h1>
-    </div>
+
+    <nav>
+      <!-- <input type="checkbox" id="check">
+      <label for="check" class="checkBtn">
+           <i class="fa-solid fa-bars"></i> -->
+      <label for=""><a href="#">JScat</a></label>
+      <ul>
+        <li>About Us</li>
+        <li>Cars</li>
+        <li>Sign in</li>
+      </ul>
+    </nav>
 
     <div id="displayCarts"></div>
+
+    <footer>
+          <div class="footer-content">
+              <p>© 2024 Twoja Strona. Wszelkie prawa zastrzeżone.</p>
+              <ul class="social-links">
+                  <li><a href="https://www.facebook.com" target="_blank">Facebook</a></li>
+                  <li><a href="https://www.twitter.com" target="_blank">Twitter</a></li>
+                  <li><a href="https://www.instagram.com" target="_blank">Instagram</a></li>
+                  <li><a href="https://www.linkedin.com" target="_blank">LinkedIn</a></li>
+              </ul>
+            
+          </div>
+      </footer>
 
     <script src="/script/homePageScript.js"></script>
   </body>
